# Neuron-Project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Datas.txt  Graphs.py  Neuron.cpp  Neuron.hpp  Neuron_unittest.cpp  README.md  main.cpp
inc/: Network.hpp  Neuron.hpp  Simulation.hpp
src/: Network.cpp  Neuron.cpp  Neuron_unittest.cpp  Simulation.cpp  main.cpp
